--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
         </table>
         <h1>Table No 6</h1>
         <table border="1" width="300" height="300">
-            <tr>
+            <tr height="300">
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
+            <tr height="180">
                 <td colspan="2"></td>
             </tr>
-            <tr>
+            <tr height="800">
                 <td></td>
                 <td></td>
             </tr>
-            <tr>
+            <tr height="200">
                 <td colspan="2"></td>
             </tr>
         </table>
